background image try

--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
 
 				<!-- Banner -->
 					<section id="banner">
-                        <div>
-                            background-image: images/banner.JPG;
+                        <div class="main">
                             <!-- <img src="images/banner.JPG" alt="grow_final_moderation" style="opacity: 0.6; "> -->
 						    <div class="inner">
 							    <div class="logo"><span class="icon fa-heart"></span></div>
                                 <h2>Welcome!</h2>
-							    <p>This is <b>Martin S. Thoma's<b> Website.</br>You will find a short presentation of my projects, passions and myself.</p>
+							    <p>This is <strong>Martin S. Thoma's<strong> Website.</br>You will find a short presentation of my projects, passions and myself.</p>
 						    </div>
                         </div>
 					</section>
