background image try

--- a/index.html
+++ b/index.html
@@ -43,15 +43,12 @@
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner">
-                        <div class="main">
-                            <!-- <img src="images/banner.JPG" alt="grow_final_moderation" style="opacity: 0.6; "> -->
+					<section id="banner" style="background-image: url("banner.JPG");">
 						    <div class="inner">
 							    <div class="logo"><span class="icon fa-heart"></span></div>
                                 <h2>Welcome!</h2>
 							    <p>This is <strong>Martin S. Thoma's<strong> Website.</br>You will find a short presentation of my projects, passions and myself.</p>
 						    </div>
-                        </div>
 					</section>
 
 				<!-- Wrapper -->
