--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner" style="background-image: url("banner.JPG");">
+					<section id="banner" style="background-image: url("http://martinthoma.me/images/banner.JPG");">
 						    <div class="inner">
 							    <div class="logo"><span class="icon fa-heart"></span></div>
                                 <h2>Welcome!</h2>
-							    <p>This is <strong>Martin S. Thoma's<strong> Website.</br>You will find a short presentation of my projects, passions and myself.</p>
+							    <p>This is <strong>Martin S. Thoma's</strong> Website.</br>You will find a short presentation of my projects, passions and myself.</p>
 						    </div>
 					</section>
 
