--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner" style="background-image: url("http://martinthoma.me/images/banner.JPG");">
+					<section id="banner" style="background: url(http://thoma997.github.io/images/pic01.jpg)">
 						    <div class="inner">
 							    <div class="logo"><span class="icon fa-heart"></span></div>
                                 <h2>Welcome!</h2>
