--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner" style="background-image: url(http://thoma997.github.io/images/banner.png); background-size: cover">
-						    <div class="inner">
-							    <div class="logo"><span class="icon fa-heart"></span></div>
+					<section id="banner" style="background-image: url(http://thoma997.github.io/images/banner.png); background-size: cover; background-position-y: -60px">
+						    <div class="inner" style="text-shadow: 0 1px black;">
+							    <!-- <div class="logo"><span class="icon fa-heart"></span></div> -->
                                 <h2>Welcome!</h2>
-							    <p>This is <strong>Martin S. Thoma's</strong> Website.</br>You will find a short presentation of my projects, passions and myself.</p>
+							    <p>This is <strong>Martin S. Thoma</strong>'s Website.</br>You will find a short presentation of my projects, passions and myself.</p>
 						    </div>
 					</section>
 
@@ -55,13 +55,13 @@
 					<section id="wrapper">
 
 						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
+							<section id="one" class="wrapper spotlight style1" style="background-image: url(http://thoma997.github.io/images/work_background.jpg); background-size: cover;">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Work</h2>
+										<p>Here I will show you the projects I already did and what working experience I already got.</p>
+										<a href="http://martinthoma.me/Work.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -71,8 +71,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Studies</h2>
+										<p>If you like to know more about my studies and interests - Here you go.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -83,8 +83,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Social engagement and Hobbies</h2>
+                                        <p>Work and Studies are important but can't define a human.</br> Here you will see how I keep my life in balance.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
