--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Martin Thoma</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Welcome!</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -31,8 +31,6 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Generic</a></li>
 											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
 										</ul>
 									</div>
 								</li>
@@ -43,10 +41,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>Welcome!</h2>
+							<p>This is <strong>Martin S. Thoma</strong>'s Website.</br>
+								You will find a short presentation</br>of my projects, passions and myself.</p>
 							<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
 							</ul>
