--- a/index.html
+++ b/index.html
@@ -39,14 +39,11 @@
 					</header>
 
 				<!-- Banner -->
-					<section id="banner">
+					<section id="banner" style="background-image: url(http://thoma997.github.io/images/banner.png); background-size: cover">
 						<div class="inner">
 							<h2>Welcome!</h2>
 							<p>This is <strong>Martin S. Thoma</strong>'s Website.</br>
 								You will find a short presentation</br>of my projects, passions and myself.</p>
-							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
-							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
