--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					</header>
 
 				<!-- Banner -->
-					<section id="banner" style="background-image: url(http://thoma997.github.io/images/banner.jpg); background-size: cover">
+					<section id="banner" style="background-image: url(http://thoma997.github.io/images/banner.JPG); background-size: cover">
 						<div class="inner">
 							<h2>Welcome!</h2>
 							<p>This is <strong>Martin S. Thoma</strong>'s Website.</br>
