--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 				<!-- Banner -->
 					<section id="banner" style="background-image: url(http://thoma997.github.io/images/banner.JPG); background-size: cover">
-						<div class="inner">
+						<div class="inner" style="margin-top: 300px; background: rgba(0,0,0,0.4); padding-top: 10px;">
 							<h2>Welcome!</h2>
 							<p>This is <strong>Martin S. Thoma</strong>'s Website.</br>
 								You will find a short presentation</br>of my projects, passions and myself.</p>
@@ -49,7 +49,7 @@
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style1 special">
+					<!-- <section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Arcu aliquet vel lobortis ata nisl<br />
@@ -63,29 +63,26 @@
 								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
+								<h2>Work</h2>
+								<p>Currently I am working as freelancer to develop websites for privat persons and companies. I already gained experience in Web Automation, Business Analytics, teaching classes and Project Management. I love to master challenges and to force myself out of comfort zones.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/studies_australia.jpg" alt="studies_australia.jpg" /></div><div class="content">
+								<h2>Studies</h2>
+								<p>At the moment I am studying at University of NewCastle, NSW, Australia for two semesters. When I return to Germany in December 2018, I will finish my Bachelor of Science in the major "Industrial Engineering and Management" at Karlsruher Institure of Technologie.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Social Engagement and Hobbies</h2>
+								<p>Despite doing tons of sports like diving, playing football and going to the gym, I am an active member of "Stiftung Wissen+Kompetenzen" and "PionierGarage e.V." Back in Germany I was Managing Director of PionierGarage and Project Koordinator of "GROW - Gründungswettbewerb". In Australia I will organize the "Chewing Tuesday , Germany" in May.</p>
 							</div>
 						</section>
 					</section>
