update social engagement

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/social_engagement.jpg" alt="social_engagement.jpg" /></div><div class="content">
 								<h2>Social Engagement and Hobbies</h2>
-								<p>Despite doing tons of sports like diving, playing football and going to the gym, I am an active member of "Stiftung Wissen+Kompetenzen" and "PionierGarage e.V." Back in Germany I was Managing Director of PionierGarage and Project Koordinator of "GROW - Gründungswettbewerb". In Australia I will organize the "Chewing Tuesday , Germany" in May.</p>
+								<p>Despite loving to do tons of sports like diving, playing football and weight lifting, I am an active member of "Stiftung Wissen+Kompetenzen" and "PionierGarage e.V." Back in Germany I was Managing Director of PionierGarage and Project Koordinator of "GROW - Gründungswettbewerb". In Australia I will organize the "Chewing Tuesday , Germany" in May.</p>
 							</div>
 						</section>
 					</section>
