Email Form UI Finished

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
 						<section>
-							<h4>Form</h4>
+							<h4>Say Hello! and send me an E-Mail</h4>
+							</br>
 							<form method="post" action="#">
 								<div class="row uniform">
 									<div class="6u 12u$(xsmall)">
@@ -137,7 +138,7 @@
 										<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
 									</div>
 									<div class="12u$">
-										<input type="subject" name="demo-subject" id="demo-subject" value="" placeholder="Subject" />
+										<input type="text" name="demo-subject" id="demo-subject" value="" placeholder="Subject" />
 									</div>
 									<div class="12u$">
 										<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
