Email Form UI Finished

--- a/index.html
+++ b/index.html
@@ -126,32 +126,34 @@
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
-						<section>
-							<h4>Say Hello! and send me an E-Mail</h4>
-							</br>
-							<form method="post" action="#">
-								<div class="row uniform">
-									<div class="6u 12u$(xsmall)">
-										<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+						<div class="inner">
+							<section>
+								<h4>Say Hello! and send me an E-Mail</h4>
+								</br>
+								<form method="post" action="#">
+									<div class="row uniform">
+										<div class="6u 12u$(xsmall)">
+											<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+										</div>
+										<div class="6u$ 12u$(xsmall)">
+											<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+										</div>
+										<div class="12u$">
+											<input type="text" name="demo-subject" id="demo-subject" value="" placeholder="Subject" />
+										</div>
+										<div class="12u$">
+											<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+										</div>
+										<div class="12u$">
+											<ul class="actions">
+												<li><input type="submit" value="Send Message" class="special" /></li>
+												<li><input type="reset" value="Reset" /></li>
+											</ul>
+										</div>
 									</div>
-									<div class="6u$ 12u$(xsmall)">
-										<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
-									</div>
-									<div class="12u$">
-										<input type="text" name="demo-subject" id="demo-subject" value="" placeholder="Subject" />
-									</div>
-									<div class="12u$">
-										<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-									</div>
-									<div class="12u$">
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="special" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</div>
-								</div>
-							</form>
-						</section>
+								</form>
+							</section>
+						</div>
 					</section>
 
 				<!-- Footer -->
