Email Form UI Finished

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					</section>
 
 				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
+					<section class="wrapper style4">
 						<div class="inner">
 							<section>
 								<h4>Say Hello! and send me an E-Mail</h4>
