navigation fix. First Project in segment

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Welcome!</a></h1>
+						<h1><a href="index.html">Martin Thoma</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -45,7 +45,7 @@
 							<p>This is <strong>Martin S. Thoma</strong>'s Website.</br>
 								You will find a short presentation</br>of my projects, passions and myself.</p>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#two" class="more scrolly">Learn More</a>
 					</section>
 
 				<!-- One -->
@@ -91,21 +91,22 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Projects and Passions</h2>
+								<p>Are you interested in what I am interested? Watch through!</p>
 							</header>
 							<ul class="features">
+								<li class="icon fa-code">
+									<h3>Programming Websites</h3>
+									<p>Programming websites and contact to costumers are a lot of fun and a posibility to earn some money while studying. You like to see an example besides this website?
+										<a href="http://reiserlaw.eu">Here you go</a></p>
+									<p>If you are interested in me as website developer, just <a href="#form">say hello!</a></p>
+								</li>
 								<li class="icon fa-paper-plane-o">
 									<h3>Arcu accumsan</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 								<li class="icon fa-laptop">
 									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 								<li class="icon fa-headphones">
@@ -125,10 +126,10 @@
 					</section>
 
 				<!-- CTA -->
-					<section class="wrapper style4">
+					<section id="form" class="wrapper style4">
 						<div class="inner">
 							<section>
-								<h4>Say Hello! and send me an E-Mail</h4>
+								<h4>Send me an E-Mail and say Hello!</h4>
 								</br>
 								<form method="post" action="#">
 									<div class="row uniform">
@@ -159,14 +160,13 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="www.linkedin.com/in/thoma-martin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:martin.thoma@web.de" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/Thoma997" class="icon fa-github"><span class="label">GitHub</span></a></li>
+
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Martin Thoma</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
