--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">Martin Thoma</a></h1>
-						<nav id="nav">
+						<!-- <nav id="nav">
 							<ul>
 								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+								s	<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
@@ -35,7 +35,7 @@
 									</div>
 								</li>
 							</ul>
-						</nav>
+						</nav> -->
 					</header>
 
 				<!-- Banner -->
@@ -101,25 +101,29 @@
 										<a href="http://reiserlaw.eu">Here you go</a></p>
 									<p>If you are interested in me as website developer, just <a href="#form">say hello!</a></p>
 								</li>
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-search">
+									<h3>Job Seeker</h3>
+									<p>To finance my stay and studies in Australia I am looking for a job as bar tender, barista or waiter. I would love to find a job with contact to costumers also in other branches than hospitality.</p>
+								    <p>You know someone who knows someone? <a href="form">Just say hello!</a> </p>
+                                </li>
+								<li class="icon fa-book">
+									<h3>Becomeing an Analyst</h3>
+									<p>Statistics, Operations Research and Computer Science. Together they built the ultimate tool to analyze huge amounts of data and are able to predict dependences. In the next few months and during my masters degree I am looking forward to get deeper knowledge in those fields.</p>
 								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-rocket">
+									<h3>Managing Director at PionierGarage e.V.</h3>
+                                    <p>PionierGarage e.V. is  the entrepreneurship student club of Karlsruher Institut of Technologie. By joining them I became highly interested in founding my own company. Since them I started working on projects to follow my aim to change something with my own company.
+                                        </br>If you are interested in entrepreneurship just follow the
+                                        <a href="http://pioniergarage.de">link to PionierGarage</a>.</p>
 								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-leaf">
+									<h3>GROW-Gründungswettbewerb</h3>
+									<p>To be responsible for the organisation of the biggest entrepreneurship contest organized in by students in germany was a lot of work but honor. 18 teams accepted the challenge but only the best could win prices of more than 8000€</p>
+                                    <p><a href="grow.pioniergarage.de">Here</a> you will find all you need to know. Next GROW takes place in winter 2018.</p>
 								</li>
-								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-volume-up">
+									<h3><a href="#form">Say Hello!</a></h3>
+									<p>I am open minded and interested in connecting with new people. Just write a short message - you will find the contact form below. </p>
 								</li>
 							</ul>
 						</div>
