--- a/index.html
+++ b/index.html
@@ -99,30 +99,30 @@
 									<h3>Programming Websites</h3>
 									<p>Programming websites and contact to costumers are a lot of fun and a posibility to earn some money while studying. You like to see an example besides this website?
 										<a href="http://reiserlaw.eu">Here you go</a></p>
-									<p>If you are interested in me as website developer, just <a href="#form">say hello!</a></p>
+									<p>If you are interested in me as website developer, just <a href="#form" class="more scrolly">say hello!</a></p>
 								</li>
 								<li class="icon fa-search">
 									<h3>Job Seeker</h3>
 									<p>To finance my stay and studies in Australia I am looking for a job as bar tender, barista or waiter. I would love to find a job with contact to costumers also in other branches than hospitality.</p>
-								    <p>You know someone who knows someone? <a href="form">Just say hello!</a> </p>
+								    <p>You know someone who knows someone? <a href="form" class="more scrolly">Just say hello!</a> </p>
                                 </li>
 								<li class="icon fa-book">
 									<h3>Becomeing an Analyst</h3>
-									<p>Statistics, Operations Research and Computer Science. Together they built the ultimate tool to analyze huge amounts of data and are able to predict dependences. In the next few months and during my masters degree I am looking forward to get deeper knowledge in those fields.</p>
+									<p>Statistics, Operations Research and Computer Science. Together they built the ultimate tool to analyze huge amounts of data and to predict complex dependencies. In the next few months and during my masters degree I am looking forward to get deeper knowledge in those fields.</p>
 								</li>
 								<li class="icon fa-rocket">
 									<h3>Managing Director at PionierGarage e.V.</h3>
-                                    <p>PionierGarage e.V. is  the entrepreneurship student club of Karlsruher Institut of Technologie. By joining them I became highly interested in founding my own company. Since them I started working on projects to follow my aim to change something with my own company.
+                                    <p>PionierGarage e.V. is  the entrepreneurship student club of Karlsruher Institut of Technologie. By joining them I became highly interested in founding my own company. Since then, I started to work on projects to follow my aim to change something.
                                         </br>If you are interested in entrepreneurship just follow the
                                         <a href="http://pioniergarage.de">link to PionierGarage</a>.</p>
 								</li>
 								<li class="icon fa-leaf">
 									<h3>GROW-Gründungswettbewerb</h3>
-									<p>To be responsible for the organisation of the biggest entrepreneurship contest organized in by students in germany was a lot of work but honor. 18 teams accepted the challenge but only the best could win prices of more than 8000€</p>
+									<p>To be responsible for the organisation of the biggest entrepreneurship contest in Germany that is organized by students was a lot of work but honor. 18 teams accepted the challenge but only the best could win prices of more than 8000€</p>
                                     <p><a href="grow.pioniergarage.de">Here</a> you will find all you need to know. Next GROW takes place in winter 2018.</p>
 								</li>
 								<li class="icon fa-volume-up">
-									<h3><a href="#form">Say Hello!</a></h3>
+									<h3><a href="#form" class="more scrolly">Say Hello!</a></h3>
 									<p>I am open minded and interested in connecting with new people. Just write a short message - you will find the contact form below. </p>
 								</li>
 							</ul>
