--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								<li class="icon fa-search">
 									<h3>Job Seeker</h3>
 									<p>To finance my stay and studies in Australia I am looking for a job as bar tender, barista or waiter. I would love to find a job with contact to costumers also in other branches than hospitality.</p>
-								    <p>You know someone who knows someone? <a href="form" class="more scrolly">Just say hello!</a> </p>
+								    <p>You know someone who knows someone? <a href="#form" class="more scrolly">Just say hello!</a> </p>
                                 </li>
 								<li class="icon fa-book">
 									<h3>Becomeing an Analyst</h3>
