--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Martin Thoma</a></h1>
+						<h1><a href="#banner" class="more scrolly">Martin Thoma</a></h1>
+						<ul class="icons">
+							<li><a href="www.linkedin.com/in/thoma-martin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:martin.thoma@web.de" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/Thoma997" class="icon fa-github"><span class="label">GitHub</span></a></li>
+
+						</ul>
 						<!-- <nav id="nav">
 							<ul>
 								<li class="special">
@@ -82,7 +88,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/social_engagement.jpg" alt="social_engagement.jpg" /></div><div class="content">
 								<h2>Social Engagement and Hobbies</h2>
-								<p>Despite loving to do tons of sports like diving, playing football and weight lifting, I am an active member of "Stiftung Wissen+Kompetenzen" and "PionierGarage e.V." Back in Germany I was Managing Director of PionierGarage and Project Koordinator of "GROW - Gründungswettbewerb". In Australia I will organize the "Chewing Tuesday , Germany" in May.</p>
+								<p>Despite loving to do tons of sports like diving, playing football and weight lifting, I am an active member of "Stiftung Wissen+Kompetenzen" and "PionierGarage e.V." Back in Germany I was Managing Director of PionierGarage and Project Koordinator of "GROW - Gründungswettbewerb". </br>In Australia I will organize the "Chewing Tuesday , Germany" in May.</p>
 							</div>
 						</section>
 					</section>
@@ -99,7 +105,7 @@
 									<h3>Programming Websites</h3>
 									<p>Programming websites and contact to costumers are a lot of fun and a posibility to earn some money while studying. You like to see an example besides this website?
 										<a href="http://reiserlaw.eu">Here you go</a></p>
-									<p>If you are interested in me as website developer, just <a href="#form" class="more scrolly">say hello!</a></p>
+									<p>If you are interested in me as website developer, <a href="#form" class="more scrolly">just say hello!</a></p>
 								</li>
 								<li class="icon fa-search">
 									<h3>Job Seeker</h3>
@@ -113,8 +119,8 @@
 								<li class="icon fa-rocket">
 									<h3>Managing Director at PionierGarage e.V.</h3>
                                     <p>PionierGarage e.V. is  the entrepreneurship student club of Karlsruher Institut of Technologie. By joining them I became highly interested in founding my own company. Since then, I started to work on projects to follow my aim to change something.
-                                        </br>If you are interested in entrepreneurship just follow the
-                                        <a href="http://pioniergarage.de">link to PionierGarage</a>.</p>
+                                        </br>If you are interested in entrepreneurship </br>just follow the
+                                        <a href="http://pioniergarage.de">Link to PionierGarage</a>.</p>
 								</li>
 								<li class="icon fa-leaf">
 									<h3>GROW-Gründungswettbewerb</h3>
