--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="#banner" class="more scrolly">Martin Thoma</a></h1>
-						<ul class="icons">
+						<ul class="icons" style="margin-left: 85%">
 							<li><a href="www.linkedin.com/in/thoma-martin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="mailto:martin.thoma@web.de" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							<li><a href="https://github.com/Thoma997" class="icon fa-github"><span class="label">GitHub</span></a></li>
@@ -88,7 +88,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/social_engagement.jpg" alt="social_engagement.jpg" /></div><div class="content">
 								<h2>Social Engagement and Hobbies</h2>
-								<p>Despite loving to do tons of sports like diving, playing football and weight lifting, I am an active member of "Stiftung Wissen+Kompetenzen" and "PionierGarage e.V." Back in Germany I was Managing Director of PionierGarage and Project Koordinator of "GROW - Gründungswettbewerb". </br>In Australia I will organize the "Chewing Tuesday , Germany" in May.</p>
+								<p>Despite loving to do tons of sports like diving, playing football and weight lifting, I am an active member of "Stiftung Wissen+Kompetenzen" and "PionierGarage e.V." Back in Germany I was Managing Director of PionierGarage and Project Koordinator of "GROW - Gründungswettbewerb". </br>In Australia I will organize the "Chewing Tuesday - Germany" in May. It's a subsidized cooking event where we will cook german dinner for over 100 people!</p>
 							</div>
 						</section>
 					</section>
