--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 							<section>
 								<h4>Send me an E-Mail and say Hello!</h4>
 								</br>
-								<form method="post" action="#">
+								<form method="post" action="mailto:martin.thoma@web.de">
 									<div class="row uniform">
 										<div class="6u 12u$(xsmall)">
 											<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
