--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<section id="banner" style="background-image: url(http://thoma997.github.io/images/banner.JPG); background-size: cover">
 						<div class="inner" style="margin-top: 340px; background: rgba(0,0,0,0.4); padding-top: 10px;">
 							<h2>Welcome!</h2>
-							<p>This is <strong>Martin S. Thoma</strong>'s Website.</br>
+							<p>I am <strong>Martin S. Thoma</strong>.</br>
 								You will find a short presentation</br>of my projects, passions and myself.</p>
 						</div>
 						<a href="#two" class="more scrolly">Learn More</a>
@@ -76,7 +76,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
 								<h2>Work</h2>
-								<p>Currently I am working as freelancer to develop websites for privat persons and companies. I already gained experience in Web Automation, Business Analytics, teaching classes and Project Management. I love to master challenges and to force myself out of comfort zones.</p>
+								<p>Currently I am working as freelancer. I develop websites for privat persons and companies. I already gained experience in Web Automation, Business Analytics, teaching classes and Project Management. I love to master challenges and to force myself out of comfort zones.</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -88,7 +88,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/social_engagement.jpg" alt="social_engagement.jpg" /></div><div class="content">
 								<h2>Social Engagement and Hobbies</h2>
-								<p>Despite loving to do tons of sports like diving, playing football and weight lifting, I am an active member of "Stiftung Wissen+Kompetenzen" and "PionierGarage e.V." Back in Germany I was Managing Director of PionierGarage and Project Koordinator of "GROW - Gründungswettbewerb". </br>In Australia I will organize the "Chewing Tuesday - Germany" in May. It's a subsidized cooking event where we will cook german dinner for over 100 people!</p>
+								<p>Despite loving to do tons of sports like diving, playing football and weight lifting, I am an active member of <a href="http://www.wplusk.de/">"Stiftung Wissen+Kompetenzen"</a> and <a href="https://pioniergarage.de/">"PionierGarage e.V."</a>. Back in Germany I was Managing Director of PionierGarage and Project Koordinator of <a href="http://grow.pioniergarage.de/">"GROW - Gründungswettbewerb"</a>. </br>In Australia I will organize the "Chewing Tuesday - Germany" in May. It's a subsidized cooking event where we will cook german dinner for about 200 people!</p>
 							</div>
 						</section>
 					</section>
@@ -113,7 +113,7 @@
 								    <p>You know someone who knows someone? <a href="#form" class="more scrolly">Just say hello!</a> </p>
                                 </li>
 								<li class="icon fa-book">
-									<h3>Becomeing an Analyst</h3>
+									<h3>Becoming an Analyst</h3>
 									<p>Statistics, Operations Research and Computer Science. Together they built the ultimate tool to analyze huge amounts of data and to predict complex dependencies. In the next few months and during my masters degree I am looking forward to get deeper knowledge in those fields.</p>
 								</li>
 								<li class="icon fa-rocket">
