fixed broel link to linkedin

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="www.linkedin.com/in/thoma-martin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/thoma-martin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="mailto:martin.thoma@web.de" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							<li><a href="https://github.com/Thoma997" class="icon fa-github"><span class="label">GitHub</span></a></li>
 
