some changes and updates

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<p>I am <strong>Martin S. Thoma</strong>.</br>
 								You will find a short presentation</br>of my projects, passions and myself.</p>
 						</div>
-						<a href="#two" class="more scrolly">Learn More</a>
+						<!-- <a href="#two" class="more scrolly">Learn More</a> -->
 					</section>
 
 				<!-- One -->
@@ -76,19 +76,24 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
 								<h2>Work</h2>
-								<p>Currently I am working as freelancer. I develop websites for privat persons and companies. I already gained experience in Web Automation, Business Analytics, teaching classes and Project Management. I love to master challenges and to force myself out of comfort zones.</p>
+								<p>Currently I am working as a freelancer. I develop websites for privaters and small businesses. I gained experience in Web Automation, Business Analytics, Machine Intelligence, teaching classes and Project Management. I love to master challenges and to force myself out of comfort zones. During my time as exchange student in Australia I work as waiter at <a href="https://restaurantmason.com/">Restaurant Mason</a>, Newcastle to finance my year abroad.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/studies_australia.jpg" alt="studies_australia.jpg" /></div><div class="content">
 								<h2>Studies</h2>
-								<p>At the moment I am studying at University of NewCastle, NSW, Australia for two semesters. When I return to Germany in December 2018, I will finish my Bachelor of Science in the major "Industrial Engineering and Management" at Karlsruher Institure of Technologie.</p>
+								<p>At the moment I am studying at University of NewCastle, NSW, Australia for two semesters. When I return to Germany in December 2018, I will finish my Bachelor of Science in the major "Industrial Engineering and Management" at Karlsruher Institure of Technologie. My current subjects are</p>
+								<ul>
+									<li>Machine Intelligence</li>
+									<li>Software Architecture and Quality Management</li>
+									<li>International Trade Logistics</li>
+								</ul>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/social_engagement.jpg" alt="social_engagement.jpg" /></div><div class="content">
 								<h2>Social Engagement and Hobbies</h2>
-								<p>Despite loving to do tons of sports like diving, playing football and weight lifting, I am an active member of <a href="http://www.wplusk.de/">"Stiftung Wissen+Kompetenzen"</a> and <a href="https://pioniergarage.de/">"PionierGarage e.V."</a>. Back in Germany I was Managing Director of PionierGarage and Project Coordinator of <a href="http://grow.pioniergarage.de/">"GROW - Gründungswettbewerb"</a>. </br>In Australia I will organize the "Chewing Tuesday - Germany" in May. It's a subsidized cooking event where we will cook german dinner for about 200 people!</p>
+								<p>Next to performing various activities like scuba diving, playing football and weight lifting, I am an active member of <a href="http://www.wplusk.de/">"Stiftung Wissen+Kompetenzen"</a> and <a href="https://pioniergarage.de/">"PionierGarage e.V."</a>. Back in Germany I was Managing Director of PionierGarage and Project Coordinator of <a href="http://grow.pioniergarage.de/">"GROW - Gründungswettbewerb"</a>. </br>In Australia I organized the "Cheap Chewsday - Germany" in May 2018. It's a subsidized cooking event where we will cook german dinner for about 200 people!</p>
 							</div>
 						</section>
 					</section>
@@ -112,9 +117,10 @@
 									<p>To finance my stay and studies in Australia I am looking for a job as bar tender, barista or waiter. I would love to find a job with contact to costumers also in other branches than hospitality.</p>
 								    <p>You know someone who knows someone? <a href="#form" class="more scrolly">Just say hello!</a> </p>
                                 </li>
-								<li class="icon fa-book">
-									<h3>Becoming an Analyst</h3>
-									<p>Statistics, Operations Research and Computer Science. Together they built the ultimate tool to analyze huge amounts of data and to predict complex dependencies. In the next few months and during my masters degree I am looking forward to get deeper knowledge in those fields.</p>
+								<li class="icon fa-leaf">
+									<h3>GROW-Gründungswettbewerb</h3>
+									<p>To be responsible for the organisation of the biggest entrepreneurship contest in Germany that is organized by students was a lot of work but honor. 18 teams accepted the challenge but only the best could win prices of more than 8000€</p>
+                                    <p><a href="grow.pioniergarage.de">Here</a> you will find all you need to know. Next GROW takes place in winter 2018.</p>
 								</li>
 								<li class="icon fa-rocket">
 									<h3>Managing Director at PionierGarage e.V.</h3>
@@ -122,10 +128,9 @@
                                         </br>If you are interested in entrepreneurship </br>just follow the
                                         <a href="http://pioniergarage.de">Link to PionierGarage</a>.</p>
 								</li>
-								<li class="icon fa-leaf">
-									<h3>GROW-Gründungswettbewerb</h3>
-									<p>To be responsible for the organisation of the biggest entrepreneurship contest in Germany that is organized by students was a lot of work but honor. 18 teams accepted the challenge but only the best could win prices of more than 8000€</p>
-                                    <p><a href="grow.pioniergarage.de">Here</a> you will find all you need to know. Next GROW takes place in winter 2018.</p>
+								<li class="icon fa-book">
+									<h3>Becoming an Analyst</h3>
+									<p>Statistics, Operations Research and Computer Science. Together they built the ultimate tool to analyze huge amounts of data and to predict complex dependencies. In the next few months and during my masters degree I am looking forward to get deeper knowledge in those fields.</p>
 								</li>
 								<li class="icon fa-volume-up">
 									<h3><a href="#form" class="more scrolly">Say Hello!</a></h3>
