--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
 								<h2>Work</h2>
-								<p>Currently I am working as a freelancer. I develop websites for privaters and small businesses. I gained experience in Web Automation, Business Analytics, Machine Intelligence, teaching classes and Project Management. I love to master challenges and to force myself out of comfort zones. During my time as exchange student in Australia I work as waiter at <a href="https://restaurantmason.com/">Restaurant Mason</a>, Newcastle to finance my year abroad.</p>
+								<p>Currently I am working as a freelancer. I develop websites for privaters and small businesses. I gained experience in Web Automation, Business Analytics, Machine Intelligence, teaching classes and Project Management. I love to master challenges and to force myself out of comfort zones. During my time as exchange student in Australia I additionally work as waiter at <a href="https://restaurantmason.com/">Restaurant Mason</a>, Newcastle to finance my year abroad.</p>
 							</div>
 						</section>
 						<section class="spotlight">
